--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -1,21 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
-    <section name="microsoft.identityModel"
-             type="Microsoft.IdentityModel.Configuration.MicrosoftIdentityModelSection, Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="microsoft.identityModel" type="Microsoft.IdentityModel.Configuration.MicrosoftIdentityModelSection, Microsoft.IdentityModel, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </configSections>
-
   <appSettings>
-    <add key="signingKey" value="6EHHMuUk8tyYnunylcywN/vvJqmNkkGutkeksgK+4wY="/>
+    <add key="signingKey" value="6EHHMuUk8tyYnunylcywN/vvJqmNkkGutkeksgK+4wY=" />
+    <add key="tokenIssuerName" value="TODOApi" />
+    <add key="tokenExpirationInMinutes" value="1440"/>
+    <add key="appliesToAddress" value="http://tt.com/mobile/todos" />
   </appSettings>
-  
   <system.web>
     <customErrors mode="Off" />
-    <compilation debug="true"
-                 targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0" />
     <authentication mode="None" />
   </system.web>
   <system.webServer>
@@ -31,67 +28,36 @@
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"
-           path="*."
-           verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-           modules="IsapiModule"
-           scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll"
-           preCondition="classicMode,runtimeVersionv4.0,bitness32"
-           responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"
-           path="*."
-           verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-           modules="IsapiModule"
-           scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll"
-           preCondition="classicMode,runtimeVersionv4.0,bitness64"
-           responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0"
-           path="*."
-           verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-           type="System.Web.Handlers.TransferRequestHandler"
-           preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers"
-                          publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0"
-                         newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc"
-                          publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0"
-                         newVersion="4.0.0.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages"
-                          publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0"
-                         newVersion="2.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Autofac"
-                          publicKeyToken="17863af14b0044da"
-                          culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.6.3.862"
-                         newVersion="2.6.3.862" />
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.6.3.862" newVersion="2.6.3.862" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.Edm"
-                          publicKeyToken="31bf3856ad364e35"
-                          culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0"
-                         newVersion="5.0.2.0" />
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0" newVersion="5.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Spatial"
-                          publicKeyToken="31bf3856ad364e35"
-                          culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0"
-                         newVersion="5.0.2.0" />
+        <assemblyIdentity name="System.Spatial" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.2.0" newVersion="5.0.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
