--- a/Todo.Security/Todo.Security.csproj
+++ b/Todo.Security/Todo.Security.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcsClaimsAuthenticationManager.cs" />
     <Compile Include="GlobalClaimsAuthenticationManager.cs" />
     <Compile Include="GlobalClaimsAuthorizationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
