--- a/Todo.WebApi/Todo.WebApi.csproj
+++ b/Todo.WebApi/Todo.WebApi.csproj
@@ -120,6 +120,10 @@
       <Project>{EA925276-3B76-4178-99AB-FEA985E6AA5B}</Project>
       <Name>Todo.Base</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Todo.Security\Todo.Security.csproj">
+      <Project>{05abe5fa-9e23-4fc9-b315-bba3fce88a7e}</Project>
+      <Name>Todo.Security</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
