--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -18,6 +18,10 @@
     <UseIISExpress>false</UseIISExpress>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -209,6 +213,7 @@
     <Content Include="app\config.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="images\thinktecture.jpg" />
     <Content Include="app\js\jquery.ba-bbq.min.js" />
     <Content Include="app\js\notifier.js">
       <Generator>GoogleClosureCompiler</Generator>
@@ -255,6 +260,9 @@
     </Content>
     <Content Include="App_Data\Todo.WebApi.xml" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
+    <Content Include="images\google.jpg" />
+    <Content Include="images\microsoft.jpg" />
+    <Content Include="images\yahoo.jpg" />
     <Content Include="index.html" />
     <Content Include="simulator\devices\a100\images\horizontal.png" />
     <Content Include="simulator\devices\a100\images\vertical.png" />
