Cleanup and picture upload testing

--- a/Todo.WebApi/packages.config
+++ b/Todo.WebApi/packages.config
@@ -10,8 +10,10 @@
   <package id="Microsoft.Data.OData.Contrib" version="5.0.1.50813" targetFramework="net40" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net40" />
   <package id="SignalR.Server" version="0.5.3" targetFramework="net40" />
   <package id="System.Spatial" version="5.0.2" targetFramework="net40" />
   <package id="Thinktecture.IdentityModel" version="2.1.4" targetFramework="net40" />
+  <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
