--- a/Todo.Security/packages.config
+++ b/Todo.Security/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.10" targetFramework="net40" />
+  <package id="Thinktecture.IdentityModel" version="2.1.4" targetFramework="net40" />
 </packages>
